--- a/YAMLParser/output.yaml
+++ b/YAMLParser/output.yaml
@@ -1,164 +1,179 @@
 # Cantilever example 
 # 
 # id x y z bc1 bc2 bc3 bc4 bc5 bc6 rotID 
-? - NODE
-  - 1
-  - 0.000e+00
-  - 0.000e+00
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 2
-  - 0.000e+00
-  - 2.500e-02
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 3
-  - 0.000e+00
-  - 5.000e-02
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 4
-  - 0.000e+00
-  - 7.500e-02
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 5
-  - 0.000e+00
-  - 1.000e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 6
-  - 0.000e+00
-  - 1.250e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 7
-  - 0.000e+00
-  - 1.500e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 8
-  - 0.000e+00
-  - 1.750e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 9
-  - 0.000e+00
-  - 2.000e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 10
-  - 0.000e+00
-  - 2.250e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 11
-  - 0.000e+00
-  - 2.500e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 12
-  - 0.000e+00
-  - 2.750e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 13
-  - 0.000e+00
-  - 3.000e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 14
-  - 0.000e+00
-  - 3.250e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 15
-  - 0.000e+00
-  - 3.500e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1? - NODE
-  - 16
-  - 0.000e+00
-  - 3.750e-01
-  - 0.000e+00
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
+NODE:
+  - id: 1
+  - x: 0.000e+00
+  - y: 0.000e+00
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 2
+  - x: 0.000e+00
+  - y: 2.500e-02
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 3
+  - x: 0.000e+00
+  - y: 5.000e-02
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 4
+  - x: 0.000e+00
+  - y: 7.500e-02
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 5
+  - x: 0.000e+00
+  - y: 1.000e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 6
+  - x: 0.000e+00
+  - y: 1.250e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 7
+  - x: 0.000e+00
+  - y: 1.500e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 8
+  - x: 0.000e+00
+  - y: 1.750e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 9
+  - x: 0.000e+00
+  - y: 2.000e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 10
+  - x: 0.000e+00
+  - y: 2.250e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 11
+  - x: 0.000e+00
+  - y: 2.500e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 12
+  - x: 0.000e+00
+  - y: 2.750e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 13
+  - x: 0.000e+00
+  - y: 3.000e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 14
+  - x: 0.000e+00
+  - y: 3.250e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 15
+  - x: 0.000e+00
+  - y: 3.500e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
+NODE:
+  - id: 16
+  - x: 0.000e+00
+  - y: 3.750e-01
+  - z: 0.000e+00
+  - ix: 1
+  - iy: 1
+  - iz: 1
+  - irx: 1
+  - iry: 1
+  - irz: 1
