--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ CppProperties.json
 
 # Input example files
 YAMLParser/Test3.usf
+YAMLParser/joint_model_sample.usf
+YAMLParser/Joint_model.usf
 
 # Output from YAMLParser (this program)
 YAMLParser/output.yaml
-YAMLParser/joint_model_sample.usf
