Added output YAML files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,4 @@ YAMLParser/joint_model_sample.usf
 YAMLParser/Joint_model.usf
 
 # Output from YAMLParser (this program)
-YAMLParser/output.yaml
-YAMLParser/output_oo.yaml
+YAMLParser/output*
