--- a/YAMLParser/YAMLParser.vcxproj
+++ b/YAMLParser/YAMLParser.vcxproj
@@ -165,12 +165,16 @@
   <ItemGroup>
     <ClInclude Include="DataHolder.h" />
     <ClInclude Include="FEAFormat.h" />
+    <ClInclude Include="FENode.h" />
+    <ClInclude Include="Parser.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Writer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataHolder.cpp" />
     <ClCompile Include="FEAFormat.cpp" />
+    <ClCompile Include="FENode.cpp" />
+    <ClCompile Include="Parser.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -179,6 +183,7 @@
     </ClCompile>
     <ClCompile Include="Writer.cpp" />
     <ClCompile Include="YAMLConverter.cpp" />
+    <ClCompile Include="YAMLParser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
