Added classes representing FEM types

--- a/YAMLParser/YAMLParser.vcxproj
+++ b/YAMLParser/YAMLParser.vcxproj
@@ -165,7 +165,10 @@
   <ItemGroup>
     <ClInclude Include="DataHolder.h" />
     <ClInclude Include="FEAFormat.h" />
+    <ClInclude Include="FEBeam.h" />
     <ClInclude Include="FENode.h" />
+    <ClInclude Include="FETrishell.h" />
+    <ClInclude Include="FETypes.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Writer.h" />
@@ -173,7 +176,9 @@
   <ItemGroup>
     <ClCompile Include="DataHolder.cpp" />
     <ClCompile Include="FEAFormat.cpp" />
+    <ClCompile Include="FEBeam.cpp" />
     <ClCompile Include="FENode.cpp" />
+    <ClCompile Include="FETrishell.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
