--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="FETypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GenericFE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FEIsoMaterial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -72,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FETrishell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FEIsoMaterial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
