--- a/YAMLParser/YAMLParser.vcxproj
+++ b/YAMLParser/YAMLParser.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="FEBeam.h" />
     <ClInclude Include="FEIsoMaterial.h" />
     <ClInclude Include="FENode.h" />
+    <ClInclude Include="FEQuadshell.h" />
     <ClInclude Include="FETrishell.h" />
     <ClInclude Include="FETypes.h" />
     <ClInclude Include="GenericFE.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="FEBeam.cpp" />
     <ClCompile Include="FEIsoMaterial.cpp" />
     <ClCompile Include="FENode.cpp" />
+    <ClCompile Include="FEQuadshell.cpp" />
     <ClCompile Include="FETrishell.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="pch.cpp">
