--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="Structure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FENodeLoad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Structure.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FENodeLoad.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
