--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="FENodeLoad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FELoadComb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FENodeLoad.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FELoadComb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
