--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="FELoadComb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CrossSectionDummy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -138,6 +141,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FELoadComb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CrossSectionDummy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
