--- a/YAMLParser/YAMLParser.vcxproj
+++ b/YAMLParser/YAMLParser.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="FELoadComb.h" />
     <ClInclude Include="FENodeLoad.h" />
     <ClInclude Include="FEVector.h" />
+    <ClInclude Include="GenericMaterial.h" />
     <ClInclude Include="Structure.h" />
     <ClInclude Include="DataHolder.h" />
     <ClInclude Include="FEAFormat.h" />
