--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="GenericMaterial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PLComp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -150,6 +153,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FEVector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLComp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
