Added jointmodel.fem and errorlog to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,12 @@ CppProperties.json
 # Input example files
 YAMLParser/Test3.usf
 YAMLParser/joint_model_sample.usf
-YAMLParser/Joint_model.usf
+YAMLParser/Joint_model.fem
 
 # Output from YAMLParser (this program)
 YAMLParser/output*
 YAMLParser/*.yaml
+YAMLParser/ErrorLog.txt
 
 # Examples folder
 YAMLParser/examples/
