--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="PLComp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FETsection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -156,6 +159,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PLComp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FETsection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
