--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="FETsection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GenericSection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
