Added support for composite trishell elements

--- a/YAMLParser/YAMLParser.vcxproj.filters
+++ b/YAMLParser/YAMLParser.vcxproj.filters
@@ -93,7 +93,7 @@
     <ClInclude Include="FETsection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GenericSection.h">
+    <ClInclude Include="GenericCompSection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
